Tweak 2020-11-29.md yet again

--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -88,7 +88,7 @@ What is this Good News that Paul preached? As Paul says at the beginning of Gala
 
 Isaiah prophesied, *Oh that you would tear the heavens open and come down to make known your name to your enemies.* God has done exactly that. When John the Baptist saw Jesus he said, *Behold the lamb of God who takes away the sin of the world.* John the Baptist baptized Jesus and, as Mark tells us, *No sooner had he come up out of the water than he saw the heavens torn apart and the Spirit, like a dove, descending on him.* [Is 64.1, Jn 1.29, Mk 1.10, JB]
 
-Jesus is the way God makes things right. This is the radical message revealed to Paul by the risen Christ. Let's give Paul the last word today with more from his letter to the Galatians:
+Belief in Jesus is the way God makes things right. This is the radical message preached by Paul. Let's give Paul the last word today with more from his letter to the Galatians:
 
 > Does God give you the Spirit so freely and work miracles among you because you practise the Law, or because you believed what was preached to you? Take Abraham for example: *he believed God and it was credited to him as righteousness.* Don't you see that it is those who rely on faith who are the sons of Abraham? Scripture foresaw that God was going to use faith to make the pagans right, and proclaimed the Good News long ago when Abraham was told: *In you all the pagans will be blessed.* Those therefore who rely on faith receive the same blessing as Abraham, the man of faith. [Gal 3.5-9 JB; *just* words replaced by *right* words]
 
