add picture to 2020-11-29

--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -80,6 +80,8 @@ Paul is better qualified than most to speak on the topic of how to be right with
 
 > I am Jesus, and you are persecuting me. [Acts 9.4-5, JB]
 
+![Paul on the road to Damascus](/images/Damascus_road.jpg "Damascus Road")
+
 That is how Jesus made his name known to his enemy, Saul, who we know as Paul. Paul went through what you might call a paradigm shift. He talks about it in Galatians:
 
 > The fact is, and I want you to realise this, the Good News I preach is not a human message given by men, it is something I learnt only through a revelation of Jesus Christ. You must have heard of my career as a practising Jew, how merciless I was in persecuting the Church of God, how much damage I did to it, how I stood out among the Jews of my generation, and how enthusiastic I was for the traditions of my ancestors. Then God, who had specially chosen me while I was still in my mother's womb, called me through his grace and chose to reveal his Son in me, so that I might preach the Good News about him to the pagans. [Gal 1.11-16, JB]
