--- a/content/posts/2021-01-31.md
+++ b/content/posts/2021-01-31.md
@@ -1,97 +1,94 @@
 ---
-title: "For those who trust him"
+title: "What's this?"
 output:
   html_document:
     df_print: paged
   word_document: default
-date: '2020-11-29'
+date: '2021-01-31'
 ---
 
-## Isaiah 64
+## A deep impression
 
-Today's reading is from Isaiah chapter 64:
+Today's lectionary reading from Mark talks about what happened when Jesus went to church one day. He caused a bit of a stir.
 
-```
-Oh that you would tear the heavens open and come down
---at your Presence the mountains would melt,
-as fire sets brushwood alight,
-as fire causes water to boil--
-to make known your name to your enemies,
-and make the nations tremble at your Presence,
-working unexpected miracles
-such as no one has ever heard of before.
-No ear has heard,
-no eye has seen
-any god act like this
-for those who trust him.
-```
+> They went as far as Capernaum, and as soon as the sabbath came he went to the synagogue and began to teach. And his teaching made a deep impression on them because, unlike the scribes, he taught them with authority.
 
-[Is 64.1-4, Jerusalem Bible (JB)]
+[Mark 1.21-22 Jerusalem Bible]
 
-We believe that God *has* torn the heavens open and come down. He has come down as a person, Jesus Christ. According to Mark's Gospel, when Jesus was baptised by John,
+I like Mark's Gospel. It wasn't terribly popular in the early years of the church. We know that because we can look at the oldest manuscripts (i.e. hand copies) that we still have and see which New Testament books they cover. Looking at the Gospels, copies of Matthew, John, and Luke are found most often, followed by Mark. It seems that the Gospel of Mark was the poor relation. Someone called B. H. Streeter said,
 
-> he saw the heavens torn apart and the Spirit, like a dove, descending on him. [Mark 1.10, JB]
+> Mark provided very few lessons for the selection read in the public services of the Church. It was much less used and much less commented on than the other Gospels.
 
-Jesus told us that if we had faith we could move mountains. He lit a fire that continues to burn. Nations are shaken by his presence -- he has turned the world upside down. Through those who trust him, he has done things never seen or heard of before.
+[Streeter, *The Four Gospels* (1924), 64]
 
-But to which of his enemies did he make his name known? Does the name *Saul of Tarsus* ring a bell? We know him better as *Paul*. After being an enemy of the early Christian movement, Paul became an advocate, telling people the Good News about Jesus Christ.
+How do we account for this? Maybe it's because Mark's Greek is a bit rough. His Gospel is what you would expect if a fisherman's son wrote down what his dad used to say. It's vivid, it gives a first hand account, it's what you would get if Peter was telling the story and Mark was writing it down. Around 100 AD, someone named [Papias of Hierapolis](https://en.wikipedia.org/wiki/Papias_of_Hierapolis) said this about Mark's Gospel:
 
-At the centre of the Good News that Paul preached is a doctrine called *justification by faith*. Unfortunately, this phrase doesn't mean a lot to most people. If you walked up to some people and said *I am justified by faith* they would probably look at you funny.
+> Mark having become the interpreter of Peter, wrote down accurately whatsoever he remembered... [H]e accompanied Peter, who accommodated his instructions to the necessities [of his hearers].... Wherefore Mark made no mistake in thus writing some things as he remembered them. For of one thing he took special care, not to omit anything he had heard, and not to put anything fictitious into the statements.
 
-A man who lives in Perth wrote a three volume book on what Paul means by this phrase, how the doctrine has developed over the last two thousand years, and how the key words are translated in English translations of the original Greek. The man's name is Richard K. Moore. He taught New Testament and I was fortunate to sit under his teaching. (He suffered a great trial as my PhD supervisor.) In his view, it is better to translate the key words with something based on the word *right* instead of the word *just*. Here is how Richard translates a central passage from Paul's letter to the Romans:
+[Fragments of Papias](https://www.newadvent.org/fathers/0125.htm)
 
-> Now, however, quite apart from the Law, the way to a right relationship with God, attested to by the Law and the Prophetic Writings, has come to light, a right relationship with God through faith in Jesus Christ for *all* who have faith. For there isn't any difference: since *all* have sinned and fall short of God's glory, they are brought into a right relationship freely, by his grace, through the liberation purchased by Jesus Christ. [Rom 3.21-24, Under the Southern Cross (USC)]
+Reading Mark is just like being there: what happened as it happened. It's as if we have Peter telling the story, but every time he said something like *then we went to Capernaum*, Mark wrote down *then they went to Capernaum.*
 
-We are made right with God through faith.
+Today's reading from Mark follows straight on from where Jesus begins to proclaim the Good News from God:
 
-Let's hear that again. *We are made right with God through faith.*
+> *The time has come* he said *and the kingdom of God is close at hand. Repent, and believe the Good News.*
 
-How can this be? Shouldn't it be, *We are made right with God through obeying the ten commandments*? Or, *We are made right with God by repenting of our sins and not doing the wrong thing any more*?
+[Mark 1.14-15 JB]
 
-In short, no. Those things are admirable but they are not the basis of a right relationship with God. They are things that go with the rightness that comes from God, but they are not *how* we get right with God.
+The next thing Mark tells us is that Jesus called Simon, Andrew, James, and John from their fishing boats, which Toby talked about last week. Jesus said, *Follow me and I will make you fishers of people.* We know Simon by the name Jesus gave him, which is Peter.
 
-The rightness of God, the rightness that comes from God, is a gift. It is a thing that God gives us when we rely on Him. We obtain it by faith.
+After Jesus said *follow me*, they went to the synagogue in Capernaum, a town on the shores of Lake Galilee. A synagogue is a Jewish house of worship, just like a church. The funny thing is that *synagogue* is a Greek word. It means *gather together*.
 
-So what is faith, and are there any examples to give us a better understanding of it? The Greek word sounds funny: πιϲτιϲ (*pistis*). It is variously translated as *faith*, *belief* or *trust*. So we obtain the rightness of God by believing Him, by trusting Him. Maybe an even better way to translate it is *reliance*. We put our faith in God, not our own efforts. We believe in God's power, not our own ability. We trust in God, not ourselves. We rely on God to bring us into a right relationship in the same way that we rely on a chair to hold us up. The rightness that comes from God is a gift. It is not something that can be earned, but it can be received.
+![An old synagogue in Capernaum](/images/Capernaum.jpg "An old synagogue in Capernaum")
 
-Is there a good biblical example of the rightness that comes from God? Paul thinks so and he gives us one immediately after the passage from Romans that we heard before. Paul's example is Abraham, the father of the Hebrew nation.
+Mark tells us that the people gathered together in that synagogue were astonished by Jesus because he taught with authority, not like the scribes. I wonder what this means? The Greek word translated as *authority* is ἐξουσία, meaning *power* or *authority*. The scribes were probably well educated in the scriptures and used to say what various well respected interpreters had said. However, they lacked something Jesus had. What happens next gives us a clue about this power and authority that Jesus has.
 
-When you think about Abraham, what things stand out to you?
+> In their synagogue just then there was a man possessed by an unclean spirit, and it shouted, *What do you want with us, Jesus of Nazareth? Have you come to destroy us? I know who you are: the Holy One of God.*
 
-Well, here's what Paul focuses on in this part of his letter to the Romans. If Abraham's rightness was based on something *he* had done then he would have something to boast about. If Abraham had earned his rightness then he deserves it just like a worker deserves his wages. However, as Paul goes on to say,
+[Mk 1.23-25 JB]
 
-> the person who doesn't do any work, but puts their faith in the one who brings the ungodly into a right relationship, that person's faith is regarded as the basis for a right relationship. [Rom 4.5, USC]
+When I hear about possessed men and unclean spirits I want to turn around and run the other way. This man started shouting in Church! A definite lack of decorum, and to make things even more freaky he shouts out that he knows who the guy up the front is. 
 
-Or, as it says somewhere else,
+> I know who you are, God's Holy One!
 
-> Abraham believed God and it was credited to him as righteousness. [Gal 3.6 NIV, quoting Gen 15.6]
+If you were the average person sitting in that synagogue (or getting ready to run out of the synagogue with me) then you would know something about the Holy One of God. That's because the Hebrew scriptures talk about him. Sometimes they call him the Messiah. Moses talks about him like this:
 
-This is radical. The basis of a right relationship with God is believing what God promises, not blamelessness in the sight of the Law.
+> Adonai your God will raise up for you a prophet like myself, from among yourselves, from your own brothers; to him you must listen. This is what you yourselves asked of Adonai your God at Horeb on the day of the Assembly. You said, *Do not let me hear again the voice of Adonai my God, nor look any longer on this great fire, or I shall die*; and Adonai said to me, *All they have spoken is well said. I will raise up a prophet like yourself for them from their own brothers; I will put my words into his mouth and he shall tell them all I command him. The man who does not listen to my words that he speaks in my name shall be held answerable to me for it....*
 
-And what does God promise? For Abraham it was a promise that all of the tribes of earth would be blessed through him [Gen 12.3]. In Paul's thinking, everything else about Abraham is a manifestation of the thing that made Abraham right with God -- belief in a God who is able to do what He promises. The episode of Isaac on Mount Moriah contains an example of Abraham's trust in God, even in the face of deadly circumstances:
+[Dt 18.15-20 JB (adapted)]
 
-> Isaac spoke to his father Abraham, 'Father' he said. 'Yes, my son' he replied. 'Look,' he said 'here are the fire and the wood, but where is the lamb for the burnt offering?' Abraham answered, 'My son, God himself will provide the lamb for the burnt offering.' [Gen 22.7-8, JB]
+So there is a stand off between Jesus and the possessed man. What happens next? Jesus tells the spirit off. *Be quiet! Come out of him!* For those who had not yet run out of the synagogue there was now an amazing sight. The unclean spirit threw the man into convulsions and with a loud cry went out of him.
 
-Paul is better qualified than most to speak on the topic of how to be right with God. After all, he had been a Pharisee, and described himself as a Hebrew of Hebrews. He must have thought deeply about how wrong he had been about the way to be right with God. His former understanding made him zealous for the things of God. However, it also brought him to the point of persecuting the Messiah.
+Once they had a chance to collect their wits they started asking each other,
 
-> Saul, Saul, Why are you persecuting me?
+> What's this? Here's a new teaching with authority behind it: he even gives orders to unclean spirits and they obey him.
 
-> Who are you, Lord?
+Mark doesn't say anything else about that poor man. Up until Jesus came to town, I imagine that people avoided him like the plague. Now he was calm, he was gentle, he was sane. People no longer need fear him. Jesus had rescued him from slavery to an awful oppressor. The man had been set free by the Great Emancipator.
 
-> I am Jesus, and you are persecuting me. [Acts 9.4-5, JB]
+What do we make of places where the New Testament mentions demon possession and unclean spirits? Something had hold of that man to the point where it owned him. It had control of him. These days we might use words like *sick*. *disturbed*, *troubled*, *unstable*, or describe the person as having *mental problems*, *anger management issues*, *a split personality*. (Professionals use a different vocabulary.)
 
-![Paul on the road to Damascus](/images/Damascus_road.jpg "Damascus Road")
+Throughout the New Testament there is an awareness of a spirit world, and not everything there is sweetness and light. Some of it is really messed up. Whatever this man had, Jesus had authority over it. He told it off, like you would tell off a bad dog, and off it went.
 
-That is how Jesus made his name known to his enemy, Saul, who we know as Paul. Paul went through what you might call a paradigm shift. He talks about it in Galatians:
+Let's think about that man a bit more. He was harassed and tormented. His friends and family had suffered with him. Whether they were still around, no one knows. One thing we do know, few suffer like those who with a tormented soul. Many of us have been touched by this kind of torment, whether in ourselves or someone close. We have seen how destructive it is, what shame it brings, how it makes people run away.
 
-> The fact is, and I want you to realise this, the Good News I preach is not a human message given by men, it is something I learnt only through a revelation of Jesus Christ. You must have heard of my career as a practising Jew, how merciless I was in persecuting the Church of God, how much damage I did to it, how I stood out among the Jews of my generation, and how enthusiastic I was for the traditions of my ancestors. Then God, who had specially chosen me while I was still in my mother's womb, called me through his grace and chose to reveal his Son in me, so that I might preach the Good News about him to the pagans. [Gal 1.11-16, JB]
+What made the man like this is a mystery. The New Testament seems to associate evil spirits with idolatry. Worshipping the wrong thing can have undesirable side effects. Delving into the unclean can make you unclean. Whatever the cause, the results were plain to see. A disturbed man who suffered torment every day. Every day, that is, until Jesus of Nazareth stepped in.
 
-What is this Good News that Paul preached? As Paul says at the beginning of Galatians, it is that the Lord Jesus Christ sacrificed himself for our sins in order to rescue us from this present wicked world, in accordance with the will of God our Father, to whom be glory for ever and ever. Amen. [Gal 1.3-5, JB, adapted]
+All kinds of things can cause suffering; psychological torment is just one. People suffer because of terrible things that have happened to them or to people they love. They think about it every day. They ask why this had to happen. They plead for it to go away. They wonder what they could have done to make things turn out differently.
 
-Isaiah prophesied, *Oh that you would tear the heavens open and come down to make known your name to your enemies.* God has done exactly that. When John the Baptist saw Jesus he said, *Behold the lamb of God who takes away the sin of the world.* John the Baptist baptized Jesus and, as Mark tells us, *No sooner had he come up out of the water than he saw the heavens torn apart and the Spirit, like a dove, descending on him.* [Is 64.1, Jn 1.29, Mk 1.10, JB]
+I was very fortunate to have excellent theological teachers. One of them, Bob Covington, was a visiting lecturer from Alabama in the USA. I was not very impressed the first time I heard him because he spoke with a stammer and seemed a bit weak. As with many of my first impressions, this one was badly wrong. Here was a man of rare depth. One day he told a little group of us, *Suffering will bring your theology undone.*
 
-Belief in Jesus Christ -- the One promised by God -- is the way God makes things right. This is the radical message preached by Paul. Let's give Paul the last word today with more from his letter to the Galatians:
+He was right. There is nothing like suffering to test everything that you think you know about God. There are degrees of suffering. Some kinds you come through OK but there are other kinds that leave you messed up. Suffering can make you break.
 
-> Does God give you the Spirit so freely and work miracles among you because you practise the Law, or because you believed what was preached to you? Take Abraham for example: *he believed God and it was credited to him as righteousness.* Don't you see that it is those who rely on faith who are the sons of Abraham? Scripture foresaw that God was going to use faith to make the pagans right, and proclaimed the Good News long ago when Abraham was told: *In you all the pagans will be blessed.* Those therefore who rely on faith receive the same blessing as Abraham, the man of faith. [Gal 3.5-9 JB; *just* words replaced by *right* words]
+Where is God in all this? How could a good God let this happen? Why did you let this happen to me? Or, even worse, why did you let this happen to my child? Maybe the only answer I ended up with is that words fail when it comes to real suffering. I could talk about how a world where there is freedom must necessarily be a world in which things can go wrong. But that is very little help to the mother who's child died on a crosswalk. Real suffering leaves us speechless.
+
+Suffering will drive people to God. However, we can end up disappointed. We can pray and the thing stays the same or even get worse. Where to from here? You are liable to get some glib answers when you ask around. Maybe you didn't pray hard enough? Maybe there is sin in your life? Maybe you don't have enough faith? Maybe this is God's will?
+
+A boy named Anthony Ashley Cooper was born in London in 1801. His uncle was the fifth Earl of Shaftesbury. This boy's parents were busy with high society and neglected him. His only friend in the world was a housekeeper named Anna Maria Milles. She would tell him stories from the Gospels and taught him how to pray. She told him about Calvary, and the empty tomb, and the risen redeemer who is happy to be our friend. Many years later he would tell friends how Maria Milles had led him to seek first the Kingdom of God, and rest not until he had found it.
+
+After his uncle died, his father became the sixth Earl of Shaftesbury. When his father died, Anthony Ashley Cooper became Lord Anthony, the seventh Earl of Shaftesbury. After going into parliament he devoted himself to reform. He sought to improve the lot of those with none to help them. He was instrumental in getting children out of mines and chimneys, in mandating reasonable working hours, in prevention of cruelty to animals, and many other wonderful things. Among the organisations he founded are the Bible Society, London City Mission, YMCA, and YWCA.
+
+These are significant achievements. However his first efforts were devoted to improving conditions for those who used to be called lunatics. You probably know the word *Bedlam* and what it means. Perhaps you don't know that *Bedlam* was the local name for Bethlehem Hospital in London. It was a lunatic asylum. People used to go there for entertainment, to watch those tormented souls as they suffered through the ministrations of straight jackets, whips, and chains. Shaftesbury's efforts on government committees helped to bring about reforms that made life better for the wretched inmates of England's madhouses. From there the reforms spread around the world.
+
+Shaftesbury's reforms can also be attributed to the power and authority of Jesus of Nazareth. When Jesus drove out the devil in the synagogue, he made a man instantly well. Jesus spoke, and it happened. Sometimes however the authority of Jesus works in a less immediate way. It works through people who decide to seek the Kingdom of God and rest not until they find it. Jesus is still just as concerned for those who suffer. His power and authority still work to set people free. Sometimes the power acts quickly and sometimes it takes a life time. There are mysteries and unanswered questions, but still his power works.
 
 Amen.
