--- a/content/posts/2021-01-31.md
+++ b/content/posts/2021-01-31.md
@@ -83,11 +83,58 @@ Where is God in all this? How could a good God let this happen? Why did you let 
 
 Suffering will drive people to God. However, we can end up disappointed. We can pray and the thing stays the same or even get worse. Where to from here? You are liable to get some glib answers when you ask around. Maybe you didn't pray hard enough? Maybe there is sin in your life? Maybe you don't have enough faith? Maybe this is God's will?
 
-A boy named Anthony Ashley Cooper was born in London in 1801. His uncle was the fifth Earl of Shaftesbury. This boy's parents were busy with high society and neglected him. His only friend in the world was a housekeeper named Anna Maria Milles. She would tell him stories from the Gospels and taught him how to pray. She told him about Calvary, and the empty tomb, and the risen redeemer who is happy to be our friend. Many years later he would tell friends how Maria Milles had led him to seek first the Kingdom of God, and rest not until he had found it.
+A boy named Anthony Ashley Cooper was born in London in 1801. His uncle was the fifth Earl of Shaftesbury. This boy's parents were busy with high society and treated him badly. His only friend in the world was a housekeeper named Anna Maria Milles.
 
-After his uncle died, his father became the sixth Earl of Shaftesbury. When his father died, Anthony Ashley Cooper became Lord Anthony, the seventh Earl of Shaftesbury. After going into parliament he devoted himself to reform. He sought to improve the lot of those with none to help them. He was instrumental in getting children out of mines and chimneys, in mandating reasonable working hours, in prevention of cruelty to animals, and many other wonderful things. Among the organisations he founded are the Bible Society, London City Mission, YMCA, and YWCA.
+> Each evening, before a nursemaid came to hurry him off for bed, Maria would take him on her knee and tell him stories from the Gospels and teach him how to pray. She told him of Calvary and the Empty Tomb and spoke of the Lord Jesus as the risen Redeemer who could be a Friend.
 
-These are significant achievements. However his first efforts were devoted to improving conditions for those who used to be called lunatics. You probably know the word *Bedlam* and what it means. Perhaps you don't know that *Bedlam* was the local name for Bethlehem Hospital in London. It was a lunatic asylum. People used to go there for entertainment, to watch those tormented souls as they suffered through the ministrations of straight jackets, whips, and chains. Shaftesbury's efforts on government committees helped to bring about reforms that made life better for the wretched inmates of England's madhouses. From there the reforms spread around the world.
+[John Pollock, *Shaftesbury: The Reformer* (Eastbourne: Kingsway, 2000), 19-20]
+
+Many years later he would tell friends how Maria Milles had *led him to seek first the Kingdom of God, and rest not until he had found it.*
+
+[Pollock, *Shaftesbury*, 20]
+
+After his uncle died, his father became the sixth Earl of Shaftesbury. When his father died, Anthony Ashley Cooper became Lord Anthony, the seventh Earl of Shaftesbury. After going into parliament he devoted himself to reform. He sought to improve the lot of those with none to help them. He was instrumental in getting children out of mines and chimneys, in mandating reasonable working hours, in prevention of cruelty to animals, and many other great things. He was a bit of an overachiever. Here's a list of organisations of which he was founder or president:
+
+* the Ragged School Union
+* National Refuges and Training Ships
+* Church Pastoral Aid Society
+* British and Foreign Bible Society
+* Church's Ministry Among the Jews
+* Dean Close School
+* John Groom's Association for the Disabled
+* London City Mission
+* Missions to Seamen
+* Open Air Mission
+* Protestant Alliance
+* Young Men's Christian Association
+* Young Women's Christian Association
+
+And that's not all. Here's a list of organisations of which he was vice-president or patron:
+
+* Aged Pilgrim's Friend Society
+* Baptist Missionary Society
+* Barnado's
+* Christian Evidence Society
+* Church Missionary Society
+* Curates Augmentation Fund
+* Intercontinental Church Society
+* Lord's Day Observance Society
+* National Anti-Vivisection Society
+* National Society for the Prevention of Cruelty to Children
+* North London Homes for the Blind
+* Railway Mission
+* Royal Associaton in Aid of the Deaf and Dumb
+* Royal Hospital and Home for Incurables
+* Royal Society for the Prevention of Cruelty to Animals
+* Seamen's Hospital Society
+* South American Missionary Society
+* Spurgeon's Homes
+* Tower Hamlets Mission
+* United Kingdom Alliance
+
+[Pollock, *Shaftesbury*, 185-6]
+
+These lists are impressive. However we should not overlook that his first efforts were devoted to improving conditions for the mentally ill. You might know what the word *Bedlam* means but probably don't know that *Bedlam* was the local name for Bethlehem Hospital in London. It was an asylum. People used to go there on Sunday outings to watch the tormented inmates as they suffered the ministrations of straight jackets, whips, and chains. Shaftesbury's efforts on government committees helped to bring about reforms that improved the lot of those confined to England's madhouses. From there the reforms spread around the world.
 
 Shaftesbury's reforms can also be attributed to the power and authority of Jesus of Nazareth. When Jesus drove out the devil in the synagogue, he made a man instantly well. Jesus spoke, and it happened. Sometimes however the authority of Jesus works in a less immediate way. It works through people who decide to seek the Kingdom of God and rest not until they find it. Jesus is still just as concerned for those who suffer. His power and authority still work to set people free. Sometimes the power acts quickly and sometimes it takes a life time. There are mysteries and unanswered questions, but still his power works.
 
