--- a/content/posts/2021-05-30.md
+++ b/content/posts/2021-05-30.md
@@ -22,7 +22,7 @@ When Jesus got to Jerusalem he went to the Temple and caused a commotion. He tur
 
 (Bible quotations are from *Under the Southern Cross*, Richard K. Moore's translation of the New Testament into Australian English.)
 
-What Jesus did and said in the Temple bothered the Jews. I should stop here and say that when John says *the Jews* he means the Jewish religious authorities. These authorities included groups such as the [Sadducees](https://en.wikipedia.org/wiki/Sadducees) -- who were a social and economic elite -- and the [Pharisees](https://en.wikipedia.org/wiki/Pharisees) -- who tried hard to stick to the Law of Moses, were generally respected by the common people. When John says *the Jews*, he does not mean all Jews. John himself was a Jew, the common people were Jews, the apostles were Jews, and Jesus is a Jew.
+What Jesus did and said in the Temple bothered the Jews. I should stop here and say that when John says *the Jews* he means the Jewish religious authorities. These authorities included groups such as the [Sadducees](https://en.wikipedia.org/wiki/Sadducees) -- who were a social and economic elite -- and the [Pharisees](https://en.wikipedia.org/wiki/Pharisees) -- who tried hard to stick to the Law of Moses, and were generally respected by the common people. When John says *the Jews*, he does not mean all Jews: John himself was a Jew, the common people were Jews, the apostles were Jews, and Jesus is a Jew.
 
 Here's what John says straight after the Temple episode [John 2.18-22 USC]:
 
