--- a/content/posts/2021-05-30.md
+++ b/content/posts/2021-05-30.md
@@ -42,7 +42,7 @@ So much for context. I had better get moving or we will be here all day.
 
 > Among the Pharisees was a person by the name of Nicodemus, a Jewish leader. He came to Jesus at night-time and said to him, 'Rabbi, we are well aware that you are a teacher who has come from God; for no-one would be capable of performing these miraculous signs that you are performing unless God were with them.' [John 3.1-2 USC]
 
-Nicodemus was a Pharisee, meaning he was the kind of Hebrew that the common people looked on as a religious role model. It's a bit surprising but Nikodemus is actually a Greek name. The meaning might be apt: νικο means *victorious* (where Nike shoes get their name) and δημοσ means *common* (where the *demo* in *democracy* comes from). So you might not be far wrong if you think of Nicodemus as a common person who has made it in the religious sense.
+Nicodemus was a Pharisee, meaning he was the kind of Hebrew that the common people looked on as a religious role model. It's a bit surprising but Nicodemus is actually a Greek name. The meaning might be apt: νικο means *victorious* (where Nike shoes get their name) and δημοσ means *common* (where the *demo* in *democracy* comes from). So you might not be far wrong if you think of Nicodemus as a common person who has made it in the religious sense.
 
 He came to Jesus at night, maybe because he was worried that people might talk if they saw him talking to Jesus. His words are a bit surprising: 'Rabbi, we are well aware that you are a teacher who has come from God.' Nicodemus, no doubt a teacher of religion, calls Jesus 'Teacher' and says 'we know you come from God.' That would indicate that he is not alone among the religious leadership in acknowledging that Jesus is from God.
 
@@ -90,7 +90,7 @@ Is Jesus having a go at Nicodemus when he says, 'You are Israel's teacher yet yo
 
 Well if Nicodemus wasn't confused before, he sure is now. What's all this about going up and coming down and Humanity's Son and Moses and the snake in the desert?
 
-Jesus starts by saying 'we speak about what we know, and testify to what we have seen.' This reminds me of the way Nicodemus started talking when he said 'we are well aware that you are a teacher who has come from God.' It's pretty clear that the 'we' Nicodemus was talking about were him and his fellows in the religious leadership. But who are the 'we' Jesus is talking about? Is it Jesus and his followers? Is it Jewish people in general? That's not a bad theory because in chapter four Jesus tells the woman at the well, 'You Samaritans worship what you don't understand; we worship what we do know about, since salvation originated with the Jews.') 
+Jesus starts by saying 'we speak about what we know, and testify to what we have seen.' This reminds me of the way Nicodemus started talking when he said 'we are well aware that you are a teacher who has come from God.' It's pretty clear that the 'we' Nicodemus was talking about were him and his fellows in the religious leadership. But who are the 'we' Jesus is talking about? Is it Jesus and his followers? Is it Jewish people in general? That's not a bad theory because in chapter four Jesus tells the woman at the well, 'You Samaritans worship what you don't understand; we worship what we do know about, since salvation originated with the Jews.'
 
 In the present case, however, I think Jesus is talking about the 'we' who said, 'Let us make humans in our own image.' He is talking about the triune God, Father, Son, and Spirit. The reason I think so is because Jesus says 'You people' (meaning the Pharisees) 'don't accept our testimony'. John elaborates on the Pharisees' unbelief in the second half of chapter five, where he also says, 'the Father who sent me has himself testified about me' [John 5.37].
 
@@ -102,17 +102,17 @@ Then Jesus says that the Son of Man must be lifted up, just as Moses lifted up t
 
 > The people came and said to Moses, 'We have sinned by speaking against Adonai and against you. Intercede for us with Adonai to save us from these serpents.' Moses interceded for the people, and Adonai answered him, 'Make a fiery serpent and put it on a standard. If anyone is bitten and looks at it, he shall live.' [Numbers 21.7-9 Jerusalem Bible]
 
-Being a Pharisee, Nicodemus would have been able to recite this text, along with everything else from the first five books of the Hebrew Bible. Jesus tells Nicodemus that he is going to be lifted up too. A few Passovers later he will be attached to a standard and put on display. As John the Baptist said when he saw Jesus at the Jordan River, 'Behold the lamb of God.' Anyone bitten by evil who looks to the lifted up Son of Man for a cure will live.
+Being a Pharisee, Nicodemus would have been able to recite this text, along with everything else from the first five books of the Hebrew Bible. Jesus tells Nicodemus, 'I am going to be lifted up too.' As John the Baptist said when he saw Jesus at the Jordan River, 'Behold the lamb of God.' A few Passovers later Jesus is going to be attached to a standard and put on display. Anyone bitten by evil who looks to the lifted up Son of Man for a cure will live.
 
 And so we arrive at the end:
 
 > For such was God's love for the world, that he gave his only child, a Son, so that everyone who puts their faith in him won't perish, but will have eternal life. For the reason God sent his Son into the world wasn't to condemn the world, but to save the world through him. [John 3.16-17 USC]
 
-This would be enough for hours of exposition but, thank the Lord, I will stop here. If you can bear it there is one more bit of Greek, the word μονογενησ. Richard Moore translates it as *only child*, which is entirely apt. Even though the Bible itself mentions *sons of God* in a few places, the Son of Man, Jesus of Nazareth, the Christ, is unique. There is only one Son who came down from heaven and returned there again. There is only one Son who was lifted up like the snake in the desert so that anyone who looks to him for a cure will live. There is only one Son who is the same species as God, and who *is* God.
+This would be enough for hours of exposition but, thank the Lord, I will stop here. If you can bear it there is one more bit of Greek, the word μονογενησ. Richard Moore translates it as *only child*, which is entirely apt. Even though the Bible itself mentions *sons of God* in a few places, the Son of Man, Jesus of Nazareth, the Christ, is unique. There is only one Son who comes from heaven and returns there again. There is only one Son who was lifted up like the snake in the desert so that anyone who looks to him for a cure will live. There is only one Son who is the same species as God, who *is* God.
 
-It seems that this cure was at work in Nicodemus from that night on. Later on, in chapter seven, Nicodemus speaks up and says,
+It seems that this cure was at work in Nicodemus after that night. Later on, in chapter seven, Nicodemus speaks up and says,
 
-> Surely our Law doesn't judge a person unless it first hears from them and ascertains what they are up to, does it?
+> Surely our Law doesn't judge a person unless it first hears from them and ascertains what they are up to, does it? [John 7.51 USC]
 
 This earned Nicodemus a rebuke from his fellows. The next time we hear of Nicodemus is when he brings a large amount of myrrh and aloes to prepare Jesus' body after he was taken down from the cross. It seems that what Jesus said to Nicodemus had a marked effect: later Nicodemus would risk his own reputation when defending Jesus and would be extravagant when preparing him for burial.
 
